--- a/CityGovernment(PWA)/index.html
+++ b/CityGovernment(PWA)/index.html
@@ -1,87 +1,35 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html>
-<head>
-	<style>
-	
+	<head>
+		<link rel="stylesheet" href="styles/style.css" type="text/css">
+		<script src="scripts/map.js" type="text/javascript"></script>
+		<script src="scripts/action.js" type="text/javascript"></script>
+	</head>
 		
-		#uiContainer {
+	<body id="bodyskin">
+		<header>
+			<button onClick="showElec()" id="buttonElec">Electric</button>
+			<button onClick="showWate()" id="buttonWate">Water</button>
+			<button onclick="showCabl()" id="buttonCabl">Cable</button>
+			<button onclick="showInte()" id="buttonInte">Internet</button>
+			<button onclick="showGvnt()" id="buttonGvnt">Government</button>
+			<button onclick="showOptn()" id="button">Other</button>
+		</header>
+		<div id="mapElec"></div>
+		<div id="mapWate"></div>
+		<div id="mapCabl"></div>
+		<div id="mapInte"></div>
+		<div id="mapGvnt"></div>
+		<div id="welcome"></div>
+		<div id="option">
+			<div id="reminder"></div>
+			<div id="howto"></div>
+			<div id="help"></div>
+			<div id=""></div>
+		</div>
 		
-			background-color:gray;
-			height:100%;
-			width:100%;
-		}
-		
-		#map {
-		
-			width: 100%;
-			height: 700px;
-		}
-		
-		#checkbox {
-		
-			display:inline-block;
-			position:relative;
-			height:200%;
-			width:100%;
-			background-color:black;
-			
-		}
-		
-		div ul p {
-		
-			display:inline;
-			color: White;
-			font-size:17px;
-			margin-right:30px;
-		}
-		
-		div ul input:before {
-			
-		}
-		
-		
-	</style>
-</head>
-<body>
-
-<div>
-
-</div>
-
-	
-
-
-	<div id="checkbox">
-		<ul>
-			<input type="checkbox" name="Electric" onchange="navAction(this.checked)"><p>Electric </p>
-			<input type="checkbox" name="vehicle" value="Bike"><p>Water </p>
-			<input type="checkbox" name="vehicle" value="Bike"><p>Cable </p>
-			<input type="checkbox" name="vehicle" value="Bike"><p>Internet </p>
-			<input type="checkbox" name="vehicle" value="Bike"><p>Government Tax </p>
-		</ul>	
-	</div>	
-		
-	<div id="map">
-	</div>
-	
-	<h1>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
-	<script>
-	
-		function initMap(){
-		
-		
-			var maryheights = {lat: 16.4023,lng:120.5963};
-			var map = new google.maps.Map(document.getElementById('map'), {
-				zoom: 16,
-				center: maryheights,
-			});
-			
-		}
-		
-
-	</script>
-	<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFSuh4RtWXR-QrOoFWpE6lttcM9We2eyk&callback=initMap">
-    </script>
-</body>
+		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFSuh4RtWXR-QrOoFWpE6lttcM9We2eyk&callback=initMap">
+		</script>
+	</body>
 </html>
