--- a/PWA-HTML/index.html
+++ b/PWA-HTML/index.html
@@ -54,12 +54,25 @@
                     </div>
                 </form>
             </div>
-        </div>
-        <div class="container">
-           <div class="row">
-               
-           </div>
-            
+        </div>        
+        <div class="container-fluid">
+             <div id="bottom">
+                    <div id="googleMap" style="width:70%;height:450px;">
+                        <center></center>
+                    </div>
+
+                    <script>
+                    function myMap() {
+                    var mapProp= {
+                        center:new google.maps.LatLng(16.4023, 120.5960),
+                        zoom:13,
+                    };
+                    var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+                    }
+                    </script>
+
+                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+             </div>                        
         </div>
     </body>
 </html>
