--- a/PWA/memo.html
+++ b/PWA/memo.html
@@ -6,7 +6,6 @@
     <title>Reminder</title>
     <link rel="stylesheet" href="memo.css">
     <meta name = "viewpost" content="width=device-width; maximum-scale=1">
-    <link rel = "stylesheet" href = "reset.min.css">
 </head>
 
 <body>
@@ -25,9 +24,10 @@
 
     <div class="container">
         <ul class="list" id = "unpaid">
-
+            <li>Hey</li>
+            <li>Hey</li>
+            <li>Hey</li>
         </ul>
-
 
         <ul class="list" id = "paid"></ul>
     </div>
