--- a/PWA/memo2.html
+++ b/PWA/memo2.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Reminder</title>
-    <meta name="viewpost" content="width=device-width; maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="memo2.css">
+    <link rel="stylesheet" type="text/css" href="reset.min.css">
 </head>
 
 <body>
-    <div class="main">
+    <div id="header">
+        <div id="head">
+            <h1>Title</h1>
+        </div>    
+    </div>    
+    
+    <div id="main">
 
         <div class="title">
             <h1>Dues</h1>
@@ -16,18 +24,23 @@
 
         <div class="content">
             <form  onSubmit = "return false;">
-                <input type = "number" min = "1" step = "any " id = "amount"/>
-                <label for = "amount">Amount</label>
-
-                <select id = "org">
-                    <option value = "Beneco">Beneco</option>
-                    <option value = "Internet">Internet</option>
-                    <option value = "BWD">BWD</option>
-                    <option value = "Cellphone">Cellphone</option>
-                    <option value = "Signal">Signal</option>
-                </select>
-                <input type = "date"/ id = "dueDate">
-                <button id = "add">Add</button>
+                <div id="bg">
+                    <div id="addform">
+                        <label for = "amount">Amount</label><br>
+                        <input type = "number" min = "1" step = "any " id = "amount"/><br>
+                        <label for = "org">Type</label><br>
+                        <select id = "org">
+                            <option value = "Beneco">Beneco</option>
+                            <option value = "Internet">Internet</option>
+                            <option value = "BWD">BWD</option>
+                            <option value = "Cellphone">Cellphone</option>
+                            <option value = "Signal">Signal</option>
+                        </select><br>
+                        <label for = "dueDate">Due Date</label><br>
+                        <input type = "date"/ id = "dueDate"><br>
+                        <button id = "add">Add</button>
+                    </div>
+                </div>    
                 <div class="container">
                     <ul class="list" id = "unpaid">
             
