--- a/PWA/memo.html
+++ b/PWA/memo.html
@@ -4,32 +4,53 @@
 <head>
     <meta charset="utf-8">
     <title>Reminder</title>
-    <link rel="stylesheet" href="memo.css">
-    <meta name = "viewpost" content="width=device-width; maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="memo.css">
+    <link rel="stylesheet" type="text/css" href="reset.min.css">
 </head>
 
 <body>
-    <header>
-        <input type="text" placeholder="Reminder" id="reminder">
-        <button id="add">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16"
-                style="enable-background:new 0 0 16 16;" xml:space="preserve">
-                <g>
-                    <path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"
-                    />
-                </g>
-            </svg>
-        </button>
-    </header>
+    <div id="header">
+        <div id="head">
+            <h1>Title</h1>
+        </div>    
+    </div>    
+    
+    <div id="main">
 
-    <div class="container">
-        <ul class="list" id = "unpaid">
+        <div class="title">
+            <h1>Dues</h1>
+        </div>
 
-        </ul>
-        <ul class="list" id = "paid"></ul>
+        <div class="content">
+            <form  onSubmit = "return false;">
+                <div id="bg">
+                    <div id="addform">
+                        <label for = "amount">Amount</label><br>
+                        <input type = "number" min = "1" step = "any " id = "amount"/><br>
+                        <label for = "org">Type</label><br>
+                        <select id = "org">
+                            <option value = "Beneco">Beneco</option>
+                            <option value = "Internet">Internet</option>
+                            <option value = "BWD">BWD</option>
+                            <option value = "Cellphone">Cellphone</option>
+                            <option value = "Signal">Signal</option>
+                        </select><br>
+                        <label for = "dueDate">Due Date</label><br>
+                        <input type = "date"/ id = "dueDate"><br>
+                        <button id = "add">Add</button>
+                    </div>
+                </div>    
+                <div class="container">
+                    <ul class="list" id = "unpaid">
+            
+                    </ul>
+                </div>
+            </form>
+        </div>
     </div>
 
-    <script src="memo.js"></script>
+    <script src = "memo.js"></script>
 </body>
 
 </html>
