Integrated the memo interface to the PWA webpage

--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -15,15 +15,17 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Add Bills</a></li>
+                        <li><a href="memo.html">Add Bills</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <section id="map">
             <div class="contatiner">
+               <div class="map-box">    
                Map here
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolorem eos modi eveniet nemo, inventore ipsa fugit doloremque, alias provident vel, illum recusandae aspernatur cumque excepturi placeat nihil qui quod?</p>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolorem eos modi eveniet nemo, inventore ipsa fugit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolorem eos modi eveniet nemo, inventore ipsa fugit </p>
+               </div>
             </div>
         </section>
         
@@ -34,7 +36,7 @@
                     <button type="submit" class="button_1">Water</button>
                     <button type="submit" class="button_1">Internet Provider</button>
                     <button type="submit" class="button_1">Load</button>
-                    <button type="submit" class="button_1">Load</button>
+<!--                    <button type="submit" class="button_1">Load</button>-->
                 </form>
             </div>
         </section>
