--- a/Front-End/memo.html
+++ b/Front-End/memo.html
@@ -13,7 +13,7 @@
         <div class="container">
            
             <div id="memo">
-                <h1><a href="">Title</a></h1>
+                <h1><a href="index.html">Title</a></h1>
                 <h1>MyDues</h1>    
             </div>
         </div>    
