--- a/Front-Endv2/memo.html
+++ b/Front-Endv2/memo.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Reminder</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <title>City Utilities-Due Bills</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/memo.css">
 </head>
 
@@ -13,7 +13,7 @@
         <div class="container">
            
             <div id="memo">
-                <h1><a href="">Title</a></h1>
+                <h1><a href="index.html">City Utilities</a></h1>
                 <h1>MyDues</h1>    
             </div>
         </div>    
