Test for cdn.rawgit.com

--- a/Front-Endv2/index.html
+++ b/Front-Endv2/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link type="text/css" rel="stylesheet" href="css/style.css">
-		<link type="manifest" href="manifest.json">
+		<link type="manifest" href="https://cdn.rawgit.com/arvindagang/weblabmt/9c88a13fe1575a932fabdd531d1fdfb0f027a1fa/Front-Endv2/manifest.json">
     </head>
     
     <body>
@@ -362,7 +362,7 @@
         <footer>
             <p>Group1 9364B S.Y2017-2018</p>
         </footer>
-		<script src="script/script.js"></script>
+		<script href="https://cdn.rawgit.com/arvindagang/weblabmt/9c88a13fe1575a932fabdd531d1fdfb0f027a1fa/Front-Endv2/sw.js"></script>
         <script>
             (function() {
 				'use strict';
