--- a/Front-Endv2/index.html
+++ b/Front-Endv2/index.html
@@ -362,9 +362,8 @@
         <footer>
             <p>Group1 9364B S.Y2017-2018</p>
         </footer>
-		<script href="script/script.js"></script>
+		<script src="script/script.js"></script>
         <script>
-            
             (function() {
 				'use strict';
 				
